firefly/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: finances
  labels:
    app: finances
  namespace: personal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: finances
  template:
    metadata:
      name: finances-pod
      labels:
        app: finances
    spec:
      containers:
        - name: firefly-iii-container
          image: fireflyiii/core
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: firefly-iii-storage
              mountPath: /var/www/html/firefly-iii/storage/upload
      volumes:
        - name: firefly-iii-storage
          persistentVolumeClaim:
            claimName: finances-pvc
