firefly/db-service.yml
apiVersion: v1
kind: Service
metadata:
  name: finances-db-service
  labels:
    app: finances-db
  namespace: personal
spec:
  selector:
    app: finances-db
  type: ClusterIP
  ports:
    - targetPort: 3306
      port: 3306
