firefly/service.yml
apiVersion: v1
kind: Service
metadata:
  name: finances-service
  labels:
    app: finances
  namespace: personal
spec:
  selector:
    app.kubernetes.io/instance: finances
    app.kubernetes.io/name: firefly-iii
  type: ClusterIP
  ports:
    - targetPort: 8080
      port: 80
